# kdev_catkin

./: CMakeLists.txt  kdevcatkin.json
src/: catkinbuildmanager.h  catkinmanager.cpp  catkinmanager.h  catkinsubproject.cpp  catkinsubproject.h
